<resources>
    <string name="app_name">My Application</string>
    <string name="quickx_ecommerce">QuickX Kids-Ecommerce</string>
    <string name="description">Where style meets comfort for fashion-forward kids. Discover trendy clothing and accessories designed to let your little ones express their unique personalities effortlessly.</string>
    <string name="submit">Submit</string>
    <string name="shipping_information">Shipping Information</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="credit_card_information">Credit Card Information</string>
    <string name="name_of_card_holder">Name of Card Holder</string>
    <string name="card_number">Card Number</string>
    <string name="cvv_number">Cvv Number</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="cart_detail">Cart Detail</string>
    <string name="your_cart">Your Cart</string>
    <string name="_3_items">3 items</string>
    <string name="total">Total:</string>
    <string name="checkout">Checkout</string>
    <string name="name">Name</string>
    <string name="form_detail">Form Detail</string>
    <string name="product_detail">Product Detail</string>
    <string name="bingo_game">Bingo Game</string>
    <string name="and_board_game_based_on_the_popular_game_of_tambola_bingo">and Board game based on the popular game of Tambola/Bingo</string>
    <string name="add">Add</string>
    <string name="_00">00</string>
    <string name="extra_charges_may_apply">Extra charges may apply</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="product">Product</string>
</resources>