<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="#6750A4"
        android:gravity="center"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <ImageButton
            android:id="@+id/imageButtonBack"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_arrow_back"
            tools:ignore="ContentDescription"
            app:tint="@color/white" />

        <View
            android:layout_width="12dp"
            android:layout_height="match_parent" />

        <TextView
            android:ellipsize="end"
            android:id="@+id/textViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="Form Detail"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:lineHeight="24sp"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_16sdp"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shipping_information"
            android:layout_marginBottom="20sp"
            android:layout_marginTop="@dimen/_22sdp"
            android:layout_gravity="center"
            android:textSize="@dimen/_24sdp"
            android:textStyle="bold"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="Name"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="@string/address"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="@string/city"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="@string/state"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="@string/country"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credit_card_information"
            android:layout_gravity="center"
            android:textSize="@dimen/_20ssp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="20dp"
            android:textStyle="normal"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="@string/name_of_card_holder"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="@string/card_number"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cvv_number"
            android:minHeight="48dp"/>


    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="#6750A4"
        android:text="@string/submit"
        android:textSize="@dimen/_20ssp"
         />


</androidx.appcompat.widget.LinearLayoutCompat>